name:               mrblog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable mrblog
  hs-source-dirs:   src
  main-is:          main.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , pandoc >= 1.16
  ghc-options:      -threaded
  default-language: Haskell2010
