name:               mrblog
version:            0.2.0
build-type:         Simple
cabal-version:      >= 1.10

executable mrblog
  hs-source-dirs:   .
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , basic-prelude
                  , hakyll 
                  , pandoc >= 1.16
                  , pandoc-types
                  , parsec
                  , containers
                  , filepath
                  , time
                  , old-locale
                  , aeson
                  , utf8-string
                  , hjsmin 
                  , bytestring
                  , text
  other-modules:    Config
                  , Compiler.Org
                  , Compiler.Javascript
                  , Compiler.Pandoc
                  , Template.Functions
  ghc-options:      -threaded
  default-language: Haskell2010
